# ratatui-code-editor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  demo.tape
benches/: diff.rs
examples/: editor.rs  editor_nl.rs  half.rs  lsp.rs  main.rs  marks.rs  minimal.rs  split.rs
examples/diff/: Cargo.toml
examples/diff/src/: main.rs
examples/diff_editor/: Cargo.toml
examples/diff_editor/src/: main.rs
examples/editor/src/: main.rs
examples/editor_nl/: Cargo.toml
examples/editor_nl/src/: main.rs
examples/fold_editor/: Cargo.toml
examples/fold_editor/src/: main.rs
examples/half/src/: main.rs
examples/lsp/src/: main.rs
examples/marks/src/: main.rs
examples/minimal/src/: main.rs
examples/split/src/: main.rs
langs/c/: folds.scm
langs/cpp/: folds.scm
langs/css/: folds.scm
langs/go/: folds.scm
langs/javascript/: folds.scm
langs/markdown/: folds.scm
langs/python/: folds.scm
langs/rust/: folds.scm  highlights.scm
langs/shell/: folds.scm
langs/toml/: folds.scm
langs/yaml/: folds.scm
src/: actions.rs  click.rs  code.rs  diff.rs  editor.rs  editor_crossterm.rs  history.rs  lib.rs  main.rs  render.rs  selection.rs  theme.rs  types.rs  utils.rs  view.rs
tests/: diff_focus.rs  editor.rs  folding.rs  input.rs  test_coord_conversion.rs  test_exclamation.rs  test_family_emoji.rs  test_grapheme_boundaries.rs  test_grapheme_cursor_bug.rs  test_grapheme_cursor_bug2.rs  test_grapheme_cursor_bug3.rs  test_grapheme_cursor_bug4.rs  test_hindi.rs  test_legacy_grapheme.rs  test_prev_boundaries.rs  test_prev_boundaries_using_next.rs  test_ratatui_buffer.rs  test_ratatui_width.rs  test_ropegraphemes.rs  test_unicode_width_i.rs
