[package]
name = "ratatui-code-editor"
version = "0.0.1"
edition = "2024"
authors = ["vipmax"]
description = "ratatui-code-editor is A code editor widget for ratatui, built with syntax highlighting powered by Tree-sitter."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vipmax/ratatui-code-editor"
repository = "https://github.com/vipmax/ratatui-code-editor.git"
keywords = ["ratatui", "terminal", "editor", "tree-sitter"]
categories = ["ratatui", "tui", "editor", "tree-sitter"]

[[example]]
name = "minimal"
path = "examples/minimal.rs"
[[example]]
name = "editor"
path = "examples/editor.rs"
[[example]]
name = "half"
path = "examples/half.rs"
[[example]]
name = "split"
path = "examples/split.rs"
[[example]]
name = "marks"
path = "examples/marks.rs"
[[example]]
name = "lsp"
path = "examples/lsp.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s" 
strip = true 

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.29"
ropey = "1.6"
rust-embed = { version = "8.7", features = ["include-exclude"] }
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
unicode-width = "=0.2.0"
unicode-segmentation = "1.11"
arboard = { version = "3.5", default-features = false }
tree-sitter-python = "0.23.6"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.23.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-yaml = "0.7.1"
tree-sitter-json = "0.24.8"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-bash = "0.25.0"
tree-sitter-md = "0.3.2"
