[workspace]
members = [
    ".",
    "examples/minimal",
    "examples/editor",
    "examples/editor_nl",
    "examples/half",
    "examples/split",
    "examples/marks",
    "examples/lsp",
]

[package]
name = "ratatui-code-editor"
version = "0.1.0"
edition = "2024"
authors = ["vipmax"]
description = "ratatui-code-editor is A code editor widget for ratatui, built with syntax highlighting powered by Tree-sitter."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vipmax/ratatui-code-editor"
repository = "https://github.com/vipmax/ratatui-code-editor.git"
keywords = ["ratatui", "terminal", "editor", "tree-sitter"]
categories = ["command-line-interface", "text-editors"]
exclude = [".anycode/*", "Cargo.toml.orig"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace.dependencies]
anyhow = "^1.0"
crossterm = "~0.29"
ratatui = "~0.30"
ratatui-code-editor = { path = "." }

[dependencies]
anyhow = "^1.0"
ratatui-core = "~0.1.0"
crossterm = { version = "~0.29", optional = true }
ropey = "^1.6"
rust-embed = { version = "^8.7", features = ["include-exclude"] }
streaming-iterator = "~0.1"
tree-sitter = "~0.26"
tree-sitter-javascript = "~0.25"
tree-sitter-rust = "~0.24"
tree-sitter-typescript = "~0.23"
unicode-width = "~0.2"
unicode-segmentation = "^1.12"
arboard = { version = "^3.5", default-features = false }
tree-sitter-python = "~0.25"
tree-sitter-go = "~0.25"
tree-sitter-java = "~0.23.5"
tree-sitter-c = "~0.24.1"
tree-sitter-cpp = "~0.23.4"
tree-sitter-html = "~0.23.2"
tree-sitter-css = "~0.25"
tree-sitter-c-sharp = "~0.23.1"
tree-sitter-yaml = "~0.7"
tree-sitter-json = "~0.24.8"
tree-sitter-toml-ng = "~0.7.0"
tree-sitter-bash = "~0.25.0"
tree-sitter-md = "~0.5.1"

[dev-dependencies]
ratatui = { workspace = true }

[features]
default = ["crossterm"]
crossterm = [
    "dep:crossterm"
]
